Services/ingress-controller/apache-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: apache-service
  namespace: k8
spec:
  type: ClusterIP
  selector:
    app: apache
  ports:
  - port: 80
    targetPort: 80
