Services/ingress-controller/nginx-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: k8
spec:
  type: ClusterIP
  selector:
    app: nginx
  ports:
  - port: 80
    targetPort: 80
